закончил правки первая часть по файлу

--- a/news-example-page.html
+++ b/news-example-page.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="img/svg/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
-	<title>Epsilon - Новости</title>
+	<title>Epsilon - Новости: Lorem ipsum dolor sit amet consectetur</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -318,101 +318,45 @@
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="/Epsilon">Главная</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Новости</li>
+								<li class="breadcrumb-item"><a href="news.html">Новости</a></li>
+								<li class="breadcrumb-item active" aria-current="page">Lorem ipsum dolor sit amet consectetur</li>
 							</ol>
 						</nav>
-
-						<div class="row news-block">
-							<div class="col-lg-6">
-								<a href="news-example-page.html">
-									<div class="card mb-3">
-										<img src="img/news/1.jpg" alt="">
-										<div class="card-body">
-											<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-											<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor</h5>
-										</div>
-									</div>
-								</a>
-							</div>
-							<div class="col-lg-6">
-								<a href="news-example-page.html">
-									<div class="card mb-3">
-										<img src="img/news/2.jpg" alt="">
-										<div class="card-body">
-											<p class="card-text"><small class="text-dated">23 Апреля 2023</small></p>
-											<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
-										</div>
-									</div>
-								</a>
-							</div>
-
-							<div class="col-lg-6">
-								<a href="news-example-page.html">
-									<div class="card mb-3">
-										<img src="img/news/3.jpg" alt="">
-										<div class="card-body">
-											<p class="card-text"><small class="text-dated">22 Апреля 2023</small></p>
-											<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet</h5>
-										</div>
-									</div>
-								</a>
-							</div>
-							<div class="col-lg-6">
-								<a href="news-example-page.html">
-									<div class="card mb-3">
-										<img src="img/news/4.jpg" alt="">
-										<div class="card-body">
-											<p class="card-text"><small class="text-dated">21 Апреля 2023</small></p>
-											<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempore quos perferendis deserunt veritatis saepe dolore error</h5>
-										</div>
-									</div>
-								</a>
-							</div>
-
-							<div class="col-lg-6">
-								<a href="news-example-page.html">
-									<div class="card mb-3">
-										<img src="img/news/5.jpg" alt=""></a>
-										<div class="card-body">
-											<p class="card-text"><small class="text-dated">20 Апреля 2023</small></p>
-											<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
-										</div>
-									</div>
-								</a>
-							</div>
-							<div class="col-lg-6">
-								<a href="news-example-page.html">
-									<div class="card mb-3">
-										<img src="img/news/6.jpg" alt="">
-										<div class="card-body">
-											<p class="card-text"><small class="text-dated">19 Апреля 2023</small></p>
-											<a href="#"><h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet suscipit ex eveniet placeat rem quae</h5>
-										</div>
-									</div>
-								</a>
-							</div>
-
-							<div class="col-12 mt-5">
-								<nav aria-label="Пагинация по страницам">
-									<ul class="pagination justify-content-center">
-										<li class="page-item">
-											<a class="page-link" href="#" aria-label="Previous">
-												<span aria-hidden="true">&laquo;</span>
-											</a>
-										</li>
-										<li class="page-item"><a class="page-link" href="#">1</a></li>
-										<li class="page-item"><a class="page-link" href="#">2</a></li>
-										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item">
-											<a class="page-link" href="#" aria-label="Next">
-												<span aria-hidden="true">&raquo;</span>
-											</a>
-										</li>
-									</ul>
-								</nav>
-							</div>
-
-						</div>
+						<h1 class="base mt-3 mb-5">Lorem ipsum dolor sit amet consectetur</h1>
+						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной
+							Электронной Компонентной Базы (ЭКБ)
+							производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
+						<img src="img/news/6.jpg" class="img-fluid" alt="">
+						<p>Наша компания имеет многолетние партнерские <a class="link" href="#">отношения</a> с более чем 15-ю заводами
+							Китайской
+							аэрокосмической
+							научно-технической корпорации (CASC), более чем 40-а заводами Китайской корпорации электронных
+							технологий (CETC) и более
+							20-ю частными предприятиями-изготовителями ЭКБ космического, военного и индустриального уровня
+							качества.</p>
+						<img src="img/news/3.jpg" width="380" class="img-fluid float-left" alt="">
+						<h2 class="blue-deco">Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие
+							более
+							чем 10-летним
+							опытом работы.</h2>
+						<p>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей
+							Российских предприятий в
+							ЭКБ,
+							предложению технических решений и осуществлению технической поддержки.</p>
+						<ul class="red-sqr">
+							<li>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских
+								предприятий в ЭКБ,
+								предложению технических решений и осуществлению технической поддержки.</li>
+							<li>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских
+								предприятий в ЭКБ,
+								предложению технических решений и осуществлению технической поддержки.</li>
+							<li>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских
+								предприятий в ЭКБ,
+								предложению технических решений и осуществлению технической поддержки.</li>
+							<li>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских
+								предприятий в ЭКБ,
+								предложению технических решений и осуществлению технической поддержки.</li>
+						</ul>
 					</div>
 				</div>
 			</div>
