--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 							<a class="nav-link" href="about.html">О компании <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07" data-toggle="dropdown-none"
+							<a class="nav-link" href="products.html" id="dropdown07" data-toggle="dropdown-none"
 								aria-haspopup="true" aria-expanded="false">Изделия</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="svch-komponenty.html">СВЧ-компоненты</a>
