--- a/news-example-page.html
+++ b/news-example-page.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="img/svg/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
-	<title>Epsilon - Новости: Lorem ipsum dolor sit amet consectetur</title>
+	<title>Epsilon - Новости: Основу нашей компании составляют высококвалифицированные технические специалисты</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -320,10 +320,10 @@
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="/Epsilon">Главная</a></li>
 								<li class="breadcrumb-item"><a href="news.html">Новости</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Lorem ipsum dolor sit amet consectetur</li>
+								<li class="breadcrumb-item active" aria-current="page">Основу нашей компании составляют высококвалифицированные технические специалисты</li>
 							</ol>
 						</nav>
-						<h1 class="base mt-3 mb-5">Lorem ipsum dolor sit amet consectetur</h1>
+						<h1 class="base mt-3 mb-5">Основу нашей компании составляют высококвалифицированные технические специалисты</h1>
 						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной
 							Электронной Компонентной Базы (ЭКБ)
 							производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
