--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -110,7 +110,7 @@
 
 				<div class="row">
 					<div class="col-12">
-						<h1 class="base text-left mt-3 mb-5">СВЧ компоненты</h1>
+						<h1 class="base black text-left mt-3 mb-5">СВЧ компоненты</h1>
 					</div>
 				</div>
 
@@ -142,7 +142,7 @@
 								<h2 class="base text-left my-5">Изделия от производителя METDA</h2>
 							</div>
 							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+								<div class="col-2"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Интегральные схемы бескорпусные</h3>
 									<ul class="red-round">
@@ -273,13 +273,13 @@
 										</div>
 										<a class="collapse-readmore" data-toggle="collapse" href="#collapseSVCH-col-1" role="button"
 											aria-expanded="false" aria-controls="collapseSVCH-col-1">
-											Показать больше
+											<span>Показать больше</span>
 										</a>
 									</ul>
 								</div>
 							</div>
 							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+								<div class="col-2"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Заголовок раздела для примера в две строки</h3>
 									<ul class="red-round">
@@ -304,12 +304,12 @@
 									</ul>
 									<a class="collapse-readmore" data-toggle="collapse" href="#collapseSVCH-col-2" role="button"
 										aria-expanded="false" aria-controls="collapseSVCH-col-2">
-										Показать больше
+										<span>Показать больше</span>
 									</a>
 								</div>
 							</div>
 							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+								<div class="col-2"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела</h3>
 									<ul class="red-round">
@@ -322,7 +322,7 @@
 							</div>
 						
 							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+								<div class="col-2"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела в две строки</h3>
 									<ul class="red-round">
@@ -334,7 +334,7 @@
 								</div>
 							</div>
 							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+								<div class="col-2"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела в две строки для примера</h3>
 									<ul class="red-round">
@@ -346,7 +346,7 @@
 								</div>
 							</div>
 							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+								<div class="col-2"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Заголовок раздела</h3>
 									<ul class="red-round">
