--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -141,13 +141,13 @@
 							<div class="col-12">
 								<h2 class="base text-left my-5">Изделия от производителя METDA</h2>
 							</div>
-							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
+							<div class="col-md-6 d-flex mb-5">
+								<div class="col-3"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Интегральные схемы бескорпусные</h3>
 									<ul class="red-round">
 										<li><a href="maloshumiashchie-usiliteli.html">Малошумящие усилители</a></li>
-										<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-1" role="button"
+										<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-1" role="button"
 												aria-expanded="false" aria-controls="collapseSVCH-1">Усилители мощности</a></li>
 										<div class="collapse" id="collapseSVCH-1">
 											<ul>
@@ -161,7 +161,7 @@
 												<li><a href="#">Усилители мощности с высоким напряжением питания</a></li>
 											</ul>
 										</div>
-										<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-2" role="button"
+										<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-2" role="button"
 												aria-expanded="false" aria-controls="collapseSVCH-2">Фазовращатели с цифровым управлением</a></li>
 										<div class="collapse" id="collapseSVCH-2">
 											<ul>
@@ -170,7 +170,7 @@
 											</ul>
 										</div>
 										<li><a href="#">Линии задержки с цифровым управлением</a></li>
-										<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-3" role="button"
+										<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-3" role="button"
 												aria-expanded="false" aria-controls="collapseSVCH-3">Аттенюаторы</a></li>
 										<div class="collapse" id="collapseSVCH-3">
 											<ul>
@@ -181,7 +181,7 @@
 											</ul>
 										</div>
 										<li><a href="#">Генераторы, управляемые напряжением</a></li>
-										<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-4" role="button"
+										<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-4" role="button"
 												aria-expanded="false" aria-controls="collapseSVCH-4">Многофункциональные интегральные схемы</a></li>
 										<div class="collapse" id="collapseSVCH-4">
 											<ul>
@@ -193,7 +193,7 @@
 												<li><a href="#">Преобразователи частоты двунаправленные</a></li>
 											</ul>
 										</div>
-										<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-5" role="button"
+										<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-5" role="button"
 												aria-expanded="false" aria-controls="collapseSVCH-5">Переключатели</a></li>
 										<div class="collapse" id="collapseSVCH-5">
 											<ul>
@@ -204,7 +204,7 @@
 											</ul>
 										</div>
 										<div class="collapse" id="collapseSVCH-col-1">
-											<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-6" role="button"
+											<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-6" role="button"
 													aria-expanded="false" aria-controls="collapseSVCH-6">Смесители, преобразователи частоты и
 													модуляторы</a></li>
 											<div class="collapse" id="collapseSVCH-6">
@@ -219,7 +219,7 @@
 													<li><a href="#">Модуляторы QPSK</a></li>
 												</ul>
 											</div>
-											<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-7" role="button"
+											<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-7" role="button"
 													aria-expanded="false" aria-controls="collapseSVCH-7">Делители и умножители частоты</a></li>
 											<div class="collapse" id="collapseSVCH-7">
 												<ul>
@@ -231,7 +231,7 @@
 											<li><a href="#">Ограничители мощности</a></li>
 											<li><a href="#">Детекторы мощности</a></li>
 											<li><a href="#">Эквалайзеры</a></li>
-											<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-8" role="button"
+											<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-8" role="button"
 													aria-expanded="false" aria-controls="collapseSVCH-8">Резисторы бескорпусные</a></li>
 											<div class="collapse" id="collapseSVCH-8">
 												<ul>
@@ -240,7 +240,7 @@
 												</ul>
 											</div>
 											<li><a href="#">Конденсаторы бескорпусные</a></li>
-											<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-9" role="button"
+											<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-9" role="button"
 													aria-expanded="false" aria-controls="collapseSVCH-9">Распределители мощности</a></li>
 											<div class="collapse" id="collapseSVCH-9">
 												<ul>
@@ -253,7 +253,7 @@
 											</div>
 											<li><a href="#">Фильтры</a></li>
 											<li><a href="#">Направленные ответвители</a></li>
-											<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-10" role="button"
+											<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-10" role="button"
 													aria-expanded="false" aria-controls="collapseSVCH-10">Компоненты для цепей управления затворами
 													транзисторов и PIN-диодами</a></li>
 											<div class="collapse" id="collapseSVCH-10">
@@ -278,8 +278,8 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
+							<div class="col-md-6 d-flex mb-5">
+								<div class="col-3"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Заголовок раздела для примера в две строки</h3>
 									<ul class="red-round">
@@ -308,21 +308,9 @@
 									</a>
 								</div>
 							</div>
-							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
-								<div class="col">
-									<h3 class="h-common text-left">Ещё один заголовок раздела</h3>
-									<ul class="red-round">
-										<li><a href="#">Транзисторы корпусированные</a></li>
-										<li><a href="#">Усилители мощности модульные</a></li>
-										<li><a href="#">Интегральные схемы корпусированные</a></li>
-										<li><a href="#">Трехмерные сборки</a></li>
-									</ul>
-								</div>
-							</div>
 						
-							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
+							<div class="col-md-6 d-flex mb-5">
+								<div class="col-3"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела в две строки</h3>
 									<ul class="red-round">
@@ -333,22 +321,10 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
+							<div class="col-md-6 d-flex mb-5">
+								<div class="col-3"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела в две строки для примера</h3>
-									<ul class="red-round">
-										<li><a href="#">Транзисторы корпусированные</a></li>
-										<li><a href="#">Усилители мощности модульные</a></li>
-										<li><a href="#">Интегральные схемы корпусированные</a></li>
-										<li><a href="#">Трехмерные сборки</a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-md-6 col-xl-4 d-flex mb-5">
-								<div class="col-2"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
-								<div class="col">
-									<h3 class="h-common text-left">Заголовок раздела</h3>
 									<ul class="red-round">
 										<li><a href="#">Транзисторы корпусированные</a></li>
 										<li><a href="#">Усилители мощности модульные</a></li>
@@ -584,7 +560,7 @@
 			}
 		}
 	</script>
-
+	
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
