--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -141,8 +141,8 @@
 							<div class="col-12">
 								<h2 class="base text-left my-5">Изделия от производителя METDA</h2>
 							</div>
-							<div class="col-md-6 d-flex mb-5">
-								<div class="col-3"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
+							<div class="col-lg-6 d-flex mb-5">
+								<div class="d-none d-sm-block col-3"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Интегральные схемы бескорпусные</h3>
 									<ul class="red-round">
@@ -203,7 +203,7 @@
 												<li><a href="#">Переключатели на основе GaN FET</a></li>
 											</ul>
 										</div>
-										<div class="collapse" id="collapseSVCH-col-1">
+										<div class="collapse body-readmore" id="collapseSVCH-col-1">
 											<li class="link-collapse"><a data-toggle="collapse" href="#collapseSVCH-6" role="button"
 													aria-expanded="false" aria-controls="collapseSVCH-6">Смесители, преобразователи частоты и
 													модуляторы</a></li>
@@ -278,8 +278,8 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-md-6 d-flex mb-5">
-								<div class="col-3"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
+							<div class="col-lg-6 d-flex mb-5">
+								<div class="d-none d-sm-block col-3"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Заголовок раздела для примера в две строки</h3>
 									<ul class="red-round">
@@ -291,7 +291,7 @@
 										<li><a href="#">Усилители мощности модульные</a></li>
 										<li><a href="#">Интегральные схемы корпусированные</a></li>
 										<li><a href="#">Трехмерные сборки</a></li>
-										<div class="collapse" id="collapseSVCH-col-2">
+										<div class="collapse body-readmore" id="collapseSVCH-col-2">
 											<li><a href="#">Транзисторы корпусированные</a></li>
 											<li><a href="#">Усилители мощности модульные</a></li>
 											<li><a href="#">Интегральные схемы корпусированные</a></li>
@@ -309,8 +309,8 @@
 								</div>
 							</div>
 						
-							<div class="col-md-6 d-flex mb-5">
-								<div class="col-3"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
+							<div class="col-lg-6 d-flex mb-5">
+								<div class="d-none d-sm-block col-3"><img src="img/pryamougolnik_10_2696.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела в две строки</h3>
 									<ul class="red-round">
@@ -321,8 +321,8 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-md-6 d-flex mb-5">
-								<div class="col-3"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
+							<div class="col-lg-6 d-flex mb-5">
+								<div class="d-none d-sm-block col-3"><img src="img/pryamougolnik_10_2697.png" alt=""></div>
 								<div class="col">
 									<h3 class="h-common text-left">Ещё один заголовок раздела в две строки для примера</h3>
 									<ul class="red-round">
@@ -560,7 +560,7 @@
 			}
 		}
 	</script>
-	
+
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
