--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 			</div>
 		</main>
 
-		<!-- News Block -->
+		<!-- News Block Carousel -->
 		<section class="news py-5">
 			<div class="container">
 				<div class="d-flex justify-content-center justify-content-lg-start mt-4 mb-5">
@@ -413,14 +413,14 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-1.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-1.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">15 Апреля 2023</small></p>
-													<h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений производства компании XMTI:
-													 интерфейсные модули LVDS.</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений производства компании XMTI:
+													 интерфейсные модули LVDS.</h5></a>
 													<p class="card-text">Представляем информацию для разработчиков цифровой аппаратуры для ответственных применений, в том числе 
 													космического уровня качества.</p>
 												</div>
@@ -433,13 +433,13 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-2.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-2.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">15 Апреля 2023</small></p>
-													<h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5></a>
 													<p class="card-text">Сообщаем Вам, что заказчиком компании АО «Эпсилон» проведены сравнительные испытания ПЛИС производства 
 													компаний Xilinx и BMTI. Испытания проводились на макете реального вычислительного модуля...</p>
 												</div>
@@ -452,13 +452,13 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-3.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-3.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">15 Апреля 2023</small></p>
-													<h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5></a>
 													<p class="card-text">Спешим ответить нашим уважаемым читателям на часто задаваемый вопрос: "А действительно ли вы можете 
 													поставлять продукцию BMTI?.." Компания "Эпсилон" осуществила поставку ПЛИС BQ5VSX35T от BMTI, которая является пин-ту-пин...</p>
 												</div>
@@ -476,15 +476,14 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-1.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-1.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">20 Марта 2023</small></p>
-													<h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений
-														производства компании XMTI:
-														интерфейсные модули LVDS.</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений
+														производства компании XMTI: интерфейсные модули LVDS.</h5></a>
 													<p class="card-text">Представляем информацию для разработчиков цифровой аппаратуры для ответственных
 														применений, в том числе
 														космического уровня качества.</p>
@@ -498,13 +497,13 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-2.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-2.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">20 Марта 2023</small></p>
-													<h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5></a>
 													<p class="card-text">Сообщаем Вам, что заказчиком компании АО «Эпсилон» проведены сравнительные
 														испытания ПЛИС производства
 														компаний Xilinx и BMTI. Испытания проводились на макете реального вычислительного модуля...</p>
@@ -518,13 +517,13 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-3.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-3.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">20 Марта 2023</small></p>
-													<h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5></a>
 													<p class="card-text">Спешим ответить нашим уважаемым читателям на часто задаваемый вопрос: "А
 														действительно ли вы можете
 														поставлять продукцию BMTI?.." Компания "Эпсилон" осуществила поставку ПЛИС BQ5VSX35T от BMTI,
@@ -544,15 +543,14 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-1.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-1.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">30 февраля 2023</small></p>
-													<h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений
-														производства компании XMTI:
-														интерфейсные модули LVDS.</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений
+														производства компании XMTI: интерфейсные модули LVDS.</h5></a>
 													<p class="card-text">Представляем информацию для разработчиков цифровой аппаратуры для ответственных
 														применений, в том числе
 														космического уровня качества.</p>
@@ -566,13 +564,13 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-2.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-2.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">30 февраля 2023</small></p>
-													<h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5></a>
 													<p class="card-text">Сообщаем Вам, что заказчиком компании АО «Эпсилон» проведены сравнительные
 														испытания ПЛИС производства
 														компаний Xilinx и BMTI. Испытания проводились на макете реального вычислительного модуля...</p>
@@ -586,13 +584,13 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="img/img-card-3.png" alt="">
+													<a href="/news-example-page.html"><img class="img-thumbnail" src="img/img-card-3.png" alt=""></a>
 												</div>
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
 													<p class="card-text"><small class="text-dated">30 февраля 2023</small></p>
-													<h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5>
+													<a href="/news-example-page.html"><h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5></a>
 													<p class="card-text">Спешим ответить нашим уважаемым читателям на часто задаваемый вопрос: "А
 														действительно ли вы можете
 														поставлять продукцию BMTI?.." Компания "Эпсилон" осуществила поставку ПЛИС BQ5VSX35T от BMTI,
